monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0810/A0810c.mc4
/* (c) https://github.com/MontiCore/monticore */
package de.monticore.grammar.cocos.invalid.A0810;

grammar A0810c extends de.monticore.common.TestLexicals {

  interface symbol A = Name;

  I implements A = Name;

  scope J extends I = Name;

}